Modified resume title

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 
 		<h2>
 			<a href=""> ABOUT </a>
-			<a href="mdresume.docx" download> RESUME </a>
+			<a href="Marvin Dizon Resume.docx" download> RESUME </a>
 			<a href="https://www.linkedin.com/in/marvin-dizon-47a614126/"> LINKEDIN </a> <a href="https://www.instagram.com/marvindizon"> TRAVEL</a>
 				<a href="https://www.facebook.com/marvindizon93"> FACEBOOK </a>
 		</h2>
