--- a/index.html
+++ b/index.html
@@ -4,23 +4,17 @@
 		<link rel="stylesheet" href="mystyle.css">
 		<title>Marvin Dizon</title>
 	</head>
-
 	<body>
-
-
 		<h2>
-			<a href=""> ABOUT </a>
-			<a href="Marvin Dizon Resume.docx" download> RESUME </a>
-			<a href="https://www.linkedin.com/in/marvin-dizon-47a614126/"> LINKEDIN </a> <a href="https://www.instagram.com/marvindizon"> TRAVEL</a>
-				<a href="https://www.facebook.com/marvindizon93"> FACEBOOK </a>
+			<a href="index.html"> ABOUT </a>
+			<a href="Marvin Dizon Resume.pdf" download> RESUME </a>
+			<a href="https://www.linkedin.com/in/marvin-dizon-47a614126/"> LINKEDIN </a>
+			<a href="travel.html"> TRAVEL</a>
 		</h2>
-
 		<h1> Hello my name is <em>Marvin Dizon</em>. </h1>
-		<div id="text">I am a IT Specialist at New York University!<br>
+		<img src="Images\marvin-dizon.jpg" alt="Marvin Dizon Face Pic" style="width:20%;height:20%;">
+		<div id="text">I am an Information Technology Specialist at New York University!<br>
 			I received my B.S. in Computer Science in May of 2017.<br>
-			  More updates to come!</div>
-
-
-
+		</div>
 	</body>
 </html>
