--- a/index.html
+++ b/index.html
@@ -5,16 +5,31 @@
 		<title>Marvin Dizon</title>
 	</head>
 	<body>
-		<h2>
+		<div class="toggle"></div>
+		<div class="content">
+		<h1>
 			<a href="index.html"> ABOUT </a>
 			<a href="Marvin Dizon Resume.pdf" download> RESUME </a>
 			<a href="https://www.linkedin.com/in/marvin-dizon-47a614126/"> LINKEDIN </a>
 			<a href="travel.html"> TRAVEL</a>
-		</h2>
-		<h1> Hello my name is <em>Marvin Dizon</em>. </h1>
+		</h1>
+		<h1> Hello my name is <em>MARVIN DIZON</em>. </h1>
 		<img src="Images\marvin-dizon.jpg" alt="Marvin Dizon Face Pic" style="width:20%;height:20%;">
-		<div id="text">I am an Information Technology Specialist at New York University!<br>
+		<p>I am an Information Technology Specialist at New York University!<br>
 			I received my B.S. in Computer Science in May of 2017.<br>
+		</p>
 		</div>
+
+		<!- Using Jquery for night mode -!>
+		<script src="https://code.jquery.com/jquery-3.3.1.js"></script>
+		<script type="text/javascript">
+    	$(document).ready(function(){
+        	$('.toggle').click(function(){
+            	$('.toggle').toggleClass('active')
+            	$('body').toggleClass('night')
+        	})
+    	})
+		</script>
+
 	</body>
 </html>
