--- a/travel.html
+++ b/travel.html
@@ -6,19 +6,20 @@
 	</head>
 
 	<body>
+		<div class="toggle"></div>
+		<div class="content">
 
-
-		<h2>
+		<h1>
 			<a href="index.html"> ABOUT </a>
 			<a href="Marvin Dizon Resume.pdf" download> RESUME </a>
 			<a href="https://www.linkedin.com/in/marvin-dizon-47a614126/"> LINKEDIN </a>
 			<a href="travel.html"> TRAVEL</a>
-		</h2>
+		</h1>
 
 
-		<div id="body">I love travelling the world and experiencing other cultures.
+		<p>I love travelling the world and experiencing other cultures.
 		Check out the places i've been to!
-		</div>
+	</p>
 
 		<!-- This is a list of images with id "images" but that doesn't really matter
 		since my CSS modifies all img elements 06/23--->
@@ -42,8 +43,17 @@
 			<img src="Images\ph20132.jpg" alt="Philippines20132">
 			<img src="Images\ph20133.jpg" alt="Philippines20133">
 		</div>
-
-
+	</div>
+		<!- Using Jquery for night mode -!>
+		<script src="https://code.jquery.com/jquery-3.3.1.js"></script>
+		<script type="text/javascript">
+			$(document).ready(function(){
+					$('.toggle').click(function(){
+							$('.toggle').toggleClass('active')
+							$('body').toggleClass('night')
+					})
+			})
+		</script>
 
 	</body>
 </html>
