Kept 'Night Mode' Internal
- added navigation bar
- added night/day mode in the nav bar
- code refactor

--- a/travel.html
+++ b/travel.html
@@ -6,18 +6,20 @@
 	</head>
 
 	<body>
+		<div class="header">
 		<div class="toggle"></div>
-		<div class="content">
-
 		<h1>
 			<a href="index.html"> ABOUT </a>
 			<a href="Marvin Dizon Resume.pdf" download> RESUME </a>
-			<a href="https://www.linkedin.com/in/marvin-dizon-47a614126/"> LINKEDIN </a>
+			<a href="https://www.linkedin.com/in/marvin-dizon-47a614126/" target="_blank"> LINKEDIN </a>
 			<a href="travel.html"> TRAVEL</a>
 		</h1>
+		</div>
+	<div class="content">
 
-
-		<p>I love travelling the world and experiencing other cultures.
+	<div class="main">
+	<p>
+		I love travelling the world and experiencing other cultures.
 		Check out the places i've been to!
 	</p>
 
@@ -44,7 +46,8 @@
 			<img src="Images\ph20133.jpg" alt="Philippines20133">
 		</div>
 	</div>
-		<!- Using Jquery for night mode -!>
+	</div>
+		<!-- Using Jquery for night mode -->
 		<script src="https://code.jquery.com/jquery-3.3.1.js"></script>
 		<script type="text/javascript">
 			$(document).ready(function(){
