--- a/index.html
+++ b/index.html
@@ -4,23 +4,37 @@
 		<link rel="stylesheet" href="mystyle.css">
 		<title>Marvin Dizon</title>
 	</head>
+
 	<body>
+		<!-- Just testing this thumbnail id, of making it look like a card?
+		<div id="thumbnail"> -->
+		<!-- this is related to dark mode toggle -->
+
+
+		<div class="header">
 		<div class="toggle"></div>
-		<div class="content">
+
 		<h1>
 			<a href="index.html"> ABOUT </a>
 			<a href="Marvin Dizon Resume.pdf" download> RESUME </a>
-			<a href="https://www.linkedin.com/in/marvin-dizon-47a614126/"> LINKEDIN </a>
+			<a href="https://www.linkedin.com/in/marvin-dizon-47a614126/" target="_blank"> LINKEDIN </a>
 			<a href="travel.html"> TRAVEL</a>
 		</h1>
-		<h1> Hello my name is <em>MARVIN DIZON</em>. </h1>
+		</div>
+		<div class="content">
+
+		<div class="main">
+		<h1> Hello my name is MARVIN DIZON! </h1>
 		<img src="Images\marvin-dizon.jpg" alt="Marvin Dizon Face Pic" style="width:20%;height:20%;">
 		<p>I am an Information Technology Specialist at New York University!<br>
 			I received my B.S. in Computer Science in May of 2017.<br>
 		</p>
+
 		</div>
 
-		<!- Using Jquery for night mode -!>
+		</div>
+
+		<!-- Using Jquery for night mode -->
 		<script src="https://code.jquery.com/jquery-3.3.1.js"></script>
 		<script type="text/javascript">
     	$(document).ready(function(){
