Updated a lot of things....

--- a/index.html
+++ b/index.html
@@ -16,11 +16,6 @@
 
 
 	<body onload="initViz();">
-		<!-- Just testing this thumbnail id, of making it look like a card?
-		<div id="thumbnail"> -->
-		<!-- this is related to dark mode toggle -->
-
-
 		<div class="header">
 		<div class="toggle"></div>
 
@@ -42,16 +37,17 @@
 
 
 		<h1 style="text-align:center;padding-top: 100px;"> PROJECTS</h1>
-			<p> <em style="color: pink;font-size: 150%;"> myTime</em>
-			is my personal time management software which tracks the amount
-			of time, by hour, of which I do certain day-to-day tasks. This helps me see
-			what tasks I need to either focus on, or do less of! The Alpha version of myTime
-			utilizes an embedded sqlite3 database where I use Tableau and it's JavaScript API
-			to embed the data visualization onto this page!
-		</p>
+
+			<p class ="project1" style="color: black !important;"> <em style="color:
+			pink;font-size: 150%"> myTime</em>
+			is my personal time management software which tracks the amount of
+			time, by hour, of which I do certain day-to-day tasks. This helps me see
+			what tasks I need to either focus on, or do less of! myTime utilizes
+			Google Cloud SQL<span>&#39;</span>s MySql database where I use Tableau, to connect to the
+			database, and it's JavaScript API to embed the data visualization onto this page.
 
 		<div id="vizContainer" style="padding-top: 15px;"></div>
-
+		</p>
 
 		</div>
 		</div>
