--- a/travel.html
+++ b/travel.html
@@ -26,12 +26,12 @@
 		<!-- This is a list of images with id "images" but that doesn't really matter
 		since my CSS modifies all img elements 06/23--->
 		<h1>BELIZE 2019</h1>
-		<div id="images">
-			<img src="Images\belize.jpg" alt="Belize">
+			<img src="Images\belize.jpg" alt="Belize" class ="images">
 		<h1>FRANCE 2018</h1>
 			<img src="Images\france1.jpg" alt="france1">
 			<video controls="controls" width="800" height="600"
-       name="Video Name" src="Images\IMG_3743.mov"></video>
+       name="Video Name" src="Images\IMG_3743.mov" style="outline: none;"
+			 loop></video>
 		<h1>PHILIPPINES 2017</h1>
 			<img src="Images\ph20171.jpg" alt="Philippines20171">
 			<img src="Images\ph20172.jpg" alt="Philippines20172">
@@ -44,7 +44,6 @@
 			<img src="Images\ph20131.jpg" alt="Philippines20131">
 			<img src="Images\ph20132.jpg" alt="Philippines20132">
 			<img src="Images\ph20133.jpg" alt="Philippines20133">
-		</div>
 	</div>
 	</div>
 		<!-- Using Jquery for night mode -->
