most up to date website

--- a/index.html
+++ b/index.html
@@ -29,29 +29,27 @@
 		<div class="content">
 
 		<div class="main">
-		<h1> Hello my name is MARVIN DIZON! </h1>
+		<h1> Hello my name is MARVIN DIZON</h1>
 		<img src="Images\marvin-dizon.jpg" alt="Marvin Dizon Face Pic" style="width:20%;height:20%;">
-		<p>I am an Information Technology Specialist at New York University!<br>
+		<p>I am an Information Technology Specialist at New York University.<br>
 			I received my B.S. in Computer Science in May of 2017.<br>
 		</p>
-
-
 		<h1 style="text-align:center;padding-top: 100px;"> PROJECTS</h1>
 
 			<p class ="project1" style="color: black !important;"> <em style="color:
-			pink;font-size: 150%"> myTime</em>
+			pink;font-size: 150%"> timeMe</em>
 			is my personal time management software which tracks the amount of
 			time, by hour, of which I do certain day-to-day tasks. This helps me see
-			what tasks I need to either focus on, or do less of! myTime utilizes
-			Google Cloud SQL<span>&#39;</span>s MySql database where I use Tableau, to connect to the
-			database, and it's JavaScript API to embed the data visualization onto this page.
+			what tasks I need to either focus on, or do less of. timeMe utilizes
+			PostgreSQL for backend database, Node.js for server side SQL executions, and Tableau to connect to the
+			database and it's JavaScript API to embed the data visualization onto this page.
 
-		<div id="vizContainer" style="padding-top: 15px;"></div>
+		
 		</p>
+		<div id="vizContainer" style="padding-top: 15px;"></div>
 
 		</div>
 		</div>
-
 		<!-- Using Jquery for night mode -->
 		<script src="https://code.jquery.com/jquery-3.3.1.js"></script>
 		<script type="text/javascript">
