--- a/index.html
+++ b/index.html
@@ -32,9 +32,27 @@
 		<h1> Hello my name is MARVIN DIZON</h1>
 		<img src="Images\marvin-dizon.jpg" alt="Marvin Dizon Face Pic" style="width:20%;height:20%;">
 		<p>I am an Information Technology Specialist at New York University.<br>
-			I received my B.S. in Computer Science in May of 2017.<br>
+			I received my B.S. in Computer Science in May of 2017.<br><br>
 		</p>
-		<h1 style="text-align:center;padding-top: 100px;"> PROJECTS</h1>
+		
+		<!-- Prepare a container for your calendar. -->
+		<script
+		src="github-calendar.min.js"></script>
+		<!-- Optionally, include the theme (if you don't want to struggle to write the CSS) -->
+		<link
+		rel="stylesheet"
+		href="github-calendar-responsive.css"
+		/>
+		<!-- Prepare a container for your calendar. -->
+		<h1> GITHUB </h1>
+		<div class="calendar">
+		<!-- Loading stuff -->
+		Loading the data just for you.
+		</div>
+		<script>
+		new GitHubCalendar(".calendar", "mar-diz");
+		</script>
+		<h1 style="text-align:center;padding-top: 10px;"> PROJECTS</h1>
 
 			<p class ="project1" style="color: black !important;"> <em style="color:
 			pink;font-size: 150%"> timeMe</em>
